--- a/css/index.css
+++ b/css/index.css
@@ -144,7 +144,7 @@ a {
 }
 
 .slogan h1 {
-    margin-top: 1.7rem;
+    margin-top: 2.6rem;
     font-size: .5rem;
 }
 
@@ -214,7 +214,8 @@ a {
 
 /* 精品应用 */
 .vta_boutiqueApplication_box {
-    margin-top: .6rem;
+    margin: .6rem auto 0;
+    width: 6.7rem;
     text-align: center;
 }
 
@@ -245,7 +246,7 @@ a {
 }
 
 .application_item img {
-    width: 3.2rem;
+    width: 3.25rem;
     height: 1.5rem;
 }
 
